--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
-  <body>]
-    <h1>my reume</h1>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<h1>my resume</h1>
+</body>
 </html>
